--- a/index.html
+++ b/index.html
@@ -709,8 +709,8 @@
 
           <ul class="project-list">
           <!-- project 1 -->
-            <li class="project-item  active" data-filter-item data-category="video">
-              <a href="44a4bxedxPwGQtSnEzGzdejnCdtrDJqkJ6uqWwGbXmdx5zrjGdHivmr9pyd7x8rVQMgumwGPCfuwseieCg8tuN5jNNeMJPU" target="_blank">
+            <li class="project-item  active" data-filter-item data-category="photo">
+              <a href="http://raw.githubusercontent.com/ilhamyudh/Ilhamcv/main/assets/images/Photos-001/Project-1.jpg" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -727,8 +727,8 @@
               </a>
             </li>
           
-            <li class="project-item  active" data-filter-item data-category="Photo">
-              <a href="#" target="_blank">
+            <li class="project-item  active" data-filter-item data-category="photo">
+              <a href="http://raw.githubusercontent.com/ilhamyudh/Ilhamcv/main/assets/images/Photos-001/Project-2.jpg" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -745,8 +745,8 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#" target="_blank">
+            <li class="project-item  active" data-filter-item data-category="photo">
+              <a href="http://raw.githubusercontent.com/ilhamyudh/Ilhamcv/main/assets/images/Photos-001/Project-3.jpg" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -763,8 +763,8 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#" target="_blank">
+            <li class="project-item  active" data-filter-item data-category="video">
+              <a href="http://raw.githubusercontent.com/ilhamyudh/Ilhamcv/main/assets/images/Photos-001/Project-4.jpg" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -781,8 +781,8 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#" target="_blank">
+            <li class="project-item  active" data-filter-item data-category="photo">
+              <a href="http://raw.githubusercontent.com/ilhamyudh/Ilhamcv/main/assets/images/Photos-001/Project-5.jpg" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -799,8 +799,8 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#" target="_blank">
+            <li class="project-item  active" data-filter-item data-category="photo">
+              <a href="http://raw.githubusercontent.com/ilhamyudh/Ilhamcv/main/assets/images/Photos-001/Project-6.jpg" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -817,8 +817,8 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#" target="_blank">
+            <li class="project-item  active" data-filter-item data-category="photo">
+              <a href="http://raw.githubusercontent.com/ilhamyudh/Ilhamcv/main/assets/images/Photos-001/Project-7.jpg" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -835,8 +835,8 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#" target="_blank">
+            <li class="project-item  active" data-filter-item data-category="photo">
+              <a href="http://raw.githubusercontent.com/ilhamyudh/Ilhamcv/main/assets/images/Photos-001/Project-8.jpg" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -853,8 +853,8 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#" target="_blank">
+            <li class="project-item  active" data-filter-item data-category="photo">
+              <a href="http://raw.githubusercontent.com/ilhamyudh/Ilhamcv/main/assets/images/Photos-001/Project-9.jpg" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -870,8 +870,8 @@
 
               </a>
             </li>
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#" target="_blank">
+            <li class="project-item  active" data-filter-item data-category="photo">
+              <a href="http://raw.githubusercontent.com/ilhamyudh/Ilhamcv/main/assets/images/Photos-001/Project-10.jpg" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -887,8 +887,8 @@
 
               </a>
             </li>
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#" target="_blank">
+            <li class="project-item  active" data-filter-item data-category="video">
+              <a href="http://raw.githubusercontent.com/ilhamyudh/Ilhamcv/main/assets/images/Photos-001/Project-11.jpg" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -904,8 +904,8 @@
 
               </a>
             </li>
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#" target="_blank">
+            <li class="project-item  active" data-filter-item data-category="photo">
+              <a href="http://raw.githubusercontent.com/ilhamyudh/Ilhamcv/main/assets/images/Photos-001/Project-12.jpg" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -921,7 +921,7 @@
 
               </a>
             </li>
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="video">
               <a href="https://www.dropbox.com/s/qtr079xmk7gg5eg/video_20210603_225041.mp4?dl=0" target="_blank">
 
                 <figure class="project-img">
@@ -938,8 +938,8 @@
 
               </a>
             </li>
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#" target="_blank">
+            <li class="project-item  active" data-filter-item data-category="video">
+              <a href="http://raw.githubusercontent.com/ilhamyudh/Ilhamcv/main/assets/images/Photos-001/Project-14.jpg" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -955,8 +955,8 @@
 
               </a>
             </li>
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#" target="_blank">
+            <li class="project-item  active" data-filter-item data-category="photo">
+              <a href="http://raw.githubusercontent.com/ilhamyudh/Ilhamcv/main/assets/images/Photos-001/Project-15.jpg" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -972,8 +972,8 @@
 
               </a>
             </li>
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#" target="_blank">
+            <li class="project-item  active" data-filter-item data-category="photo">
+              <a href="http://raw.githubusercontent.com/ilhamyudh/Ilhamcv/main/assets/images/Photos-001/Project-16.jpg" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -989,8 +989,8 @@
 
               </a>
             </li>
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#" target="_blank">
+            <li class="project-item  active" data-filter-item data-category="photo">
+              <a href="http://raw.githubusercontent.com/ilhamyudh/Ilhamcv/main/assets/images/Photos-001/Project-17.jpg" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
