--- a/index.html
+++ b/index.html
@@ -202,13 +202,11 @@
 
         <section class="about-text">
           <p>
-            Saya Merupakan Lulusan yang memiliki Jiwa Kepemimpinan, jujur dan Bertanggung Jawab. Memiliki 
-            Keinginan untuk Belajar Meningkatkan Kemampuan dan Keahlian. Dengan Kemampuan, Pengalaman dan keahlian, Saya yakin dapat Memenuhi Kualiﬁkasi dan Berkontribusi dalam 
-            Perusahaan.
+            I am a fresh graduate of Electrical Engineering, Hang Tuah University, Surabaya. I have experience in project management, system design and electronics. I have high aspirations in the field of technological innovation and electronics. have leadership spirit, honest and responsible. Have a Desire to Learn to Improve Ability and Expertise.
           </p>
 
           <p>
-            ----
+            ...
           </p>
         </section>
 
